[project]
name = "transit-lab-visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "madison-abshire",email = "mha6@uw.edu"}
]
requires-python = ">=3.14"
dependencies = [
    "maplib (>=0.20.18,<0.21.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
